--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "KP SOFTWARE POS",
-  "short_name": "KP POS",
+  "short_name": "KP Software",
   "description": "Point of Sale system by KP SOFTWARE",
   "start_url": "./index.html",
   "display": "standalone",
@@ -9,13 +9,13 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "icons/icon-192.png",
+      "src": "20250813_125724.jpg",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icons/icon-512.png",
+      "src": "20250813_125824.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
