--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
       "purpose": "any maskable"
     },
     {
-      "src": "20250813_125724.jpg",
+      "src": "20250814_010653.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
