--- a/manifest.json
+++ b/manifest.json
@@ -9,13 +9,13 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "20250813_125824.png",
+      "src": "Picsart_25-08-15_08-53-28-783.jpg",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "20250814_010653.png",
+      "src": "Picsart_25-08-15_08-53-28-783.jpg",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
